# FluidVad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: export_nnef.rs  vad_benchmark.rs
examples/electron/: index.html  main.js  package-lock.json  package.json  preload.cjs  renderer.js
models/: parity_ref.txt  silero_vad_16k_v6.nnef.tar  silero_vad_16k_v6.onnx
npm/: LICENSE  index.d.ts  index.js  mic.d.ts  mic.js  package.json  worklet.js
scripts/: build_npm.sh  make_testdata.py  prepare_model.py
src/: lib.rs  model.rs  segmentation.rs  streaming.rs  wasm.rs
testdata/: README.md  speech_16k_ort_probs.txt
tests/: model_parity.rs  state_machine.rs  streaming.rs
